# flask-api

./: Dockerfile.dev  README.md  app.py  makefile  pyproject.toml
.devcontainer/: devcontainer.json
config/: config.py
constants/: responses.py
controllers/: products.py
model/: models.py
routers/: healthcheck.py  products.py
